<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:text="@string/intervention_title"
        android:textSize="@dimen/intervention_title_size"
        android:layout_marginBottom="@dimen/intervention_title_margin"
        android:layout_marginTop="@dimen/intervention_title_margin"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="@dimen/intervention_details_size"
        android:text="@string/intervention_details"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/intervention_item_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/intervention_motif"
                    android:textSize="@dimen/intervention_item_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/intervention_item_details_size"
                    android:id="@+id/motif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/intervention_item_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/intervention_entreprise"
                    android:textSize="@dimen/intervention_item_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/intervention_item_details_size"
                    android:id="@+id/entreprise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/intervention_item_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/intervention_date"
                    android:textSize="@dimen/intervention_item_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/intervention_item_details_size"
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/intervention_item_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/intervention_lieu"
                    android:textSize="@dimen/intervention_item_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/intervention_item_details_size"
                    android:id="@+id/lieu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_marginTop="@dimen/intervention_item_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="@android:color/holo_blue_light"
                    android:text="@string/intervention_cout"
                    android:textSize="@dimen/intervention_item_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="@dimen/intervention_item_details_size"
                    android:id="@+id/cout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/payer"
            android:textStyle="bold"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/intervention_payer"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="5dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/contact"
            style="?android:attr/positiveButtonText"
            android:layout_weight="1"
            android:text="@string/intervention_nous_contacter"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>